--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
   "name": "rowaiye-call-assistant",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Twilio call assistant for The Diamond Project",
+  "main": "server.js",
   "scripts": {
-  "start": "node server.js"
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "form-data": "^4.0.4",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.10",
-    "twilio": "^5.10.4"
+    "express": "^4.18.2",
+    "twilio": "^4.21.0",
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2"
   }
 }
